NPO-586 refactoring