@@ -3,11 +3,8 @@ package az.kapitalbank.marketplace.service;
 import static az.kapitalbank.marketplace.constant.UmicoDecisionStatus.FAIL_IN_PREAPPROVED;
 import static az.kapitalbank.marketplace.constant.UmicoDecisionStatus.PENDING;
 import static az.kapitalbank.marketplace.constant.UmicoDecisionStatus.PREAPPROVED;
-import static az.kapitalbank.marketplace.constants.ConstantObject.getCustomerEntity;
 import static az.kapitalbank.marketplace.constants.ConstantObject.getOperationEntity;
-import static az.kapitalbank.marketplace.constants.ConstantObject.getOrderEntity;
-import static az.kapitalbank.marketplace.constants.TestConstants.BUSINESS_KEY;
-import static az.kapitalbank.marketplace.constants.TestConstants.TASK_ID;
+import static az.kapitalbank.marketplace.constants.ConstantObject.getOperationEntityForMonthlyPayment;
 import static az.kapitalbank.marketplace.constants.TestConstants.TRACK_ID;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -19,8 +16,6 @@ import az.kapitalbank.marketplace.client.loan.model.LeadResponse;
 import az.kapitalbank.marketplace.client.loan.model.LoanRequest;
 import az.kapitalbank.marketplace.client.loan.model.LoanResponse;
 import az.kapitalbank.marketplace.client.telesales.TelesalesClient;
-import az.kapitalbank.marketplace.client.telesales.model.CreateTelesalesOrderRequest;
-import az.kapitalbank.marketplace.client.telesales.model.CreateTelesalesOrderResponse;
 import az.kapitalbank.marketplace.constant.FraudType;
 import az.kapitalbank.marketplace.constant.SendLeadReason;
 import az.kapitalbank.marketplace.constant.SendLeadType;
@@ -30,16 +25,12 @@ import az.kapitalbank.marketplace.mapper.OrderMapper;
 import az.kapitalbank.marketplace.mapper.TelesalesMapper;
 import az.kapitalbank.marketplace.messaging.publisher.FraudCheckPublisher;
 import az.kapitalbank.marketplace.repository.OperationRepository;
-import java.math.BigDecimal;
 import java.time.OffsetDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -67,61 +58,13 @@ class LeadServiceTest {
     private LeadService leadService;
 
 
-    @ParameterizedTest
-    @CsvSource({
-            "1, 100",
-            "0, hello"
-    })
-    void sendLead_Success(String code, String message) {
-        var createTelesalesOrderRequest = CreateTelesalesOrderRequest.builder().build();
-        var createTelesalesOrderResponse = CreateTelesalesOrderResponse.builder()
-                .response(new CreateTelesalesOrderResponse.Response(code, message)).build();
-        when(telesalesMapper.toTelesalesOrder(any(OperationEntity.class),
-                eq(List.of(FraudType.PIN)))).thenReturn(createTelesalesOrderRequest);
-        when(telesalesClient.sendLead(any(CreateTelesalesOrderRequest.class))).thenReturn(
-                createTelesalesOrderResponse);
-
-        leadService.sendLead(getOperationEntity(), List.of(FraudType.PIN));
-        verify(telesalesMapper).toTelesalesOrder(any(OperationEntity.class),
-                eq(List.of(FraudType.PIN)));
-    }
-
-    @Test
-    void sendLead_retry() {
-        OperationEntity operationEntity =
-                OperationEntity.builder().id(UUID.fromString(TRACK_ID.getValue()))
-                        .commission(BigDecimal.valueOf(12)).totalAmount(BigDecimal.ONE)
-                        .dvsOrderId(12345L).taskId(TASK_ID.getValue())
-                        .businessKey(BUSINESS_KEY.getValue())
-                        .umicoDecisionStatus(UmicoDecisionStatus.PENDING)
-                        .scoredAmount(BigDecimal.ONE).build();
-        var createTelesalesOrderRequest = CreateTelesalesOrderRequest.builder().build();
-        var createTelesalesOrderResponse = CreateTelesalesOrderResponse.builder()
-                .response(new CreateTelesalesOrderResponse.Response("test", "test")).build();
-        when(telesalesMapper.toTelesalesOrder(any(OperationEntity.class),
-                eq(List.of(FraudType.PIN)))).thenReturn(createTelesalesOrderRequest);
-        when(telesalesClient.sendLead(any(CreateTelesalesOrderRequest.class))).thenReturn(
-                createTelesalesOrderResponse);
-
-        leadService.sendLead(operationEntity, List.of(FraudType.PIN));
-        verify(telesalesMapper).toTelesalesOrder(any(OperationEntity.class),
-                eq(List.of(FraudType.PIN)));
-    }
-
     @Test
     void testSendLead_UmicoServiceReturnsAbsent() {
         var loanResponse = new LoanResponse(new LeadResponse("leadId"));
 
-        var operation = OperationEntity.builder()
-                .orders(List.of(getOrderEntity()))
-                .commission(BigDecimal.valueOf(12))
-                .customer(getCustomerEntity())
-                .totalAmount(BigDecimal.ONE)
-                .loanTerm(6)
-                .build();
-
         when(loanClient.sendLead(eq("0007"), any(LoanRequest.class))).thenReturn(loanResponse);
-        leadService.sendLeadLoan(operation, Collections.singletonList(FraudType.PIN));
+
+        leadService.sendLeadLoan(getOperationEntityForMonthlyPayment(), List.of(FraudType.PIN));
         verify(loanClient).sendLead(eq("0007"), any(LoanRequest.class));
     }
 
@@ -156,7 +99,8 @@ class LeadServiceTest {
                         .sendLeadReason(SendLeadReason.OPTIMUS_FAIL_GET_PROCESS).build();
 
         when(operationRepository.findByUmicoDecisionStatusAndIsSendLeadIsFalse(
-                UmicoDecisionStatus.PENDING)).thenReturn(List.of(operationEntity));
+                UmicoDecisionStatus.PENDING)).thenReturn(
+                List.of(getOperationEntityForMonthlyPayment()));
         leadService.retrySendLead();
         verify(operationRepository).findByUmicoDecisionStatusAndIsSendLeadIsFalse(
                 UmicoDecisionStatus.PENDING);
